can update database and add new item into it tto get the elemID

--- a/talkNotes/templates/board2.ejs
+++ b/talkNotes/templates/board2.ejs
@@ -3,11 +3,11 @@
   <head>
     <meta name= "viewport" content="width=device-width, initial-scaler=1" charset="utf-8">
     <title> Chatter </title>
-    <link href="css/board.css" rel="stylesheet">
+    <!-- <link href="css/board.css" rel="stylesheet"> -->
   </head>
 
   <body>
-    <div class="container">
+    <!-- <div class="container">
       <div class="tools-section">
         <div class="color-picker-container">
           Select Brush Color: &nbsp;
@@ -31,11 +31,16 @@
               <canvas class="board" id="board"></canvas>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
   </body>
   <script src="/socket.io/socket.io.js" charset="utf-8">
   </script>
-  <script src="js/board.js" charset="utf-8"></script>
+  <!-- <script src="js/board.js" charset="utf-8"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/automerge@0.14.2/dist/automerge.min.js" charset="utf-8"></script>
+  <script src="../js/smallTest.js" charset="utf-8"></script>
+  <script type="text/javascript">
+
+  </script>
 </html>
