--- a/talkNotes/templates/svgBoard.html
+++ b/talkNotes/templates/svgBoard.html
@@ -78,7 +78,10 @@
   <script src="js/drawHelperFunctions.js" charset="utf-8"></script>
   <script src="js/MainController.js" charset="utf-8"></script>
   <script src="js/pdfRender.js" charset="utf-8"></script>
+  <script type="text/javascript">
 
+
+  </script>
   <!-- <script src="js/svgBoard.js" charset="utf-8"></script> -->
   <!-- { command: "italic", type: "button", innerHTML: "italic" }, -->
 
