trying to build database efficient add and get data methods2

--- a/talkNotes/templates/board.ejs
+++ b/talkNotes/templates/board.ejs
@@ -12,8 +12,8 @@
   <script src="/socket.io/socket.io.js" charset="utf-8">
   </script>
   <script src="https://cdn.jsdelivr.net/npm/automerge@0.14.2/dist/automerge.min.js" charset="utf-8"></script>
-  <script src="../js/dbtest.js" charset="utf-8"></script>
-  <!-- <script src="../js/smallTest.js" charset="utf-8"></script> -->
+  <!-- <script src="../js/dbtest.js" charset="utf-8"></script> -->
+  <script src="../js/smallTest.js" charset="utf-8"></script>
   <script type="text/javascript">
 
   </script>
