--- a/talkNotes/templates/board.ejs
+++ b/talkNotes/templates/board.ejs
@@ -3,12 +3,10 @@
   <head>
     <meta name= "viewport" content="width=device-width, initial-scaler=1" charset="utf-8">
     <title> Chatter </title>
-    <!-- <link href="css/board.css" rel="stylesheet"> -->
+    <!-- <link href="../css/automerge_board.css" rel="stylesheet"> -->
   </head>
 
   <body>
-
-
   </body>
 
   <script src="/socket.io/socket.io.js" charset="utf-8">
