--- a/talkNotes/templates/board.ejs
+++ b/talkNotes/templates/board.ejs
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+    <div class="contentContainer"></div>
   </body>
 
   <script src="/socket.io/socket.io.js" charset="utf-8">
