finish new page controller show that you can add new page and change the page

--- a/talkNotes/css/automerge_board.css
+++ b/talkNotes/css/automerge_board.css
@@ -1,3 +1,78 @@
+body {
+  overflow-x: hidden;
+}
+
+.pageWrapper {
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  height: 100vh;
+}
+.pageWrapper .panelContainer {
+  background: gold;
+}
+.pageWrapper .pageContentContainer {
+  background: silver;
+  position: relative;
+}
+.pageWrapper .pageContentContainer .divPage {
+  width: 100%;
+  height: 100%;
+  background: pink;
+  position: absolute;
+  left: 0;
+  right: 0;
+}
+.pageWrapper .pageContentContainer .overviewModeDiv {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-row-gap: 15px;
+}
+.pageWrapper .pageContentContainer .overviewModeDiv .divPageSmall {
+  background: pink;
+}
+.pageWrapper .pageContentContainer .fullPageModeDiv[status=off] {
+  display: none;
+}
+.pageWrapper .pageContentContainer .overviewModeDiv[status=off] {
+  display: none;
+}
+.pageWrapper .subPanel .subPanelNavbar {
+  height: 40px;
+  background: lightgreen;
+  display: grid;
+  grid-template-columns: 9fr 1fr;
+}
+.pageWrapper .subPanel .subPanelContent {
+  min-height: 300px;
+  background: coral;
+}
+.pageWrapper .subPanel .subPanelContent[status=open] {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.pageWrapper .subPanel .subPanelContent[status=close] {
+  display: none;
+}
+.pageWrapper .subPanel .subPanelItem {
+  width: 50px;
+  height: 50px;
+  background: azure;
+  margin: 0 auto;
+}
+.pageWrapper .subPanel .subPanelItem[status=on] {
+  background: yellow;
+}
+
+.bookmarkSubPanel .subPanelContent[status=open] {
+  display: block !important;
+}
+.bookmarkSubPanel .subPanelContent[status=open] .functionButton {
+  width: 90%;
+  height: 30px;
+  background: grey;
+  margin: 10px auto;
+}
+
 .container {
   position: fixed;
   width: 100%;
@@ -11,11 +86,11 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   text-align: center;
-  height: 10vh;
+  height: 8vh;
 }
 
 .pageViewController {
-  height: 90vh;
+  height: 92svh;
   background: Aliceblue;
 }
 
