now can soomehow save the data and add

--- a/talkNotes/css/automerge_board.scss
+++ b/talkNotes/css/automerge_board.scss
@@ -1,5 +1,9 @@
 body {
   overflow-x: hidden;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  margin: 0px;
 }
 
 .pageWrapper{
@@ -16,7 +20,7 @@ body {
       position: relative;
       .divPage {
           width: 100%;
-          height: 100%;
+          height: 100vh;
           background: pink;
           position: absolute;
           left: 0;
