--- a/talkNotes/templates/board.ejs
+++ b/talkNotes/templates/board.ejs
@@ -17,6 +17,7 @@
             <span class="subPanelSwitch">-</span>
           </div>
           <div class="subPanelContent"></div>
+
       </div>
     </template>
     <template id="subPanelItemTemplate">
@@ -30,7 +31,15 @@
       </div>
     </template>
 
-
+    <template id="layerControllerTemplate">
+      <div class="layerController">
+          <div class="layerView">view</div>
+          <div class="layerControllerFunction">
+              <button class="addDivLayerButton" type="button" name="button">addDivLayer</button>
+              <button class="addSvgLayerButton" type="button" name="button">addSvgLayer</button>
+          </div>
+      </div>
+    </template>
 
 
 
