--- a/talkNotes/templates/board.ejs
+++ b/talkNotes/templates/board.ejs
@@ -33,10 +33,11 @@
 
     <template id="layerControllerTemplate">
       <div class="layerController">
-          <div class="layerView">view</div>
+          <div class="layerView"></div>
           <div class="layerControllerFunction">
               <button class="addDivLayerButton" type="button" name="button">addDivLayer</button>
               <button class="addSvgLayerButton" type="button" name="button">addSvgLayer</button>
+              <button class="showCurrentPageButton" type="button" name="button">showCurrentPage</button>
           </div>
       </div>
     </template>
