found out the problem of sync, because the speed of sync is not fast enough?

--- a/talkNotes/templates/board.ejs
+++ b/talkNotes/templates/board.ejs
@@ -63,7 +63,10 @@
 
 
     <div class="contentContainer"></div>
-
+    <div class="testField"></div>
+    <div class="logField">
+        <div class="logContent"></div>
+    </div>
   </body>
 
 
