--- a/talkNotes/css/automerge_board.css
+++ b/talkNotes/css/automerge_board.css
@@ -134,6 +134,15 @@ body {
   background: pink;
 }
 
+.logField {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  height: 100vh;
+  width: 25vw;
+  background: white;
+}
+
 .layerController {
   margin: 10px;
 }
