--- a/talkNotes/css/automerge_board.scss
+++ b/talkNotes/css/automerge_board.scss
@@ -169,6 +169,15 @@ body {
     }
 }
 
+.logField {
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    height: 100vh;
+    width: 25vw;
+    background: white;
+}
+
 
 .layerController{
   margin: 10px;
