--- a/talkNotes/css/automerge_board.css
+++ b/talkNotes/css/automerge_board.css
@@ -28,6 +28,7 @@ body {
   margin: 0 auto;
   display: "grid";
   grid-template-columns: "4fr 3fr";
+  user-select: none;
 }
 .pageWrapper .toolBoxHtml .toolBoxItem {
   display: inline-block;
@@ -52,7 +53,7 @@ body {
   width: 1150px;
   height: 1678px;
   margin: 20px auto;
-  background: pink;
+  background: white;
   position: absolute;
   left: 0;
   right: 0;
@@ -76,7 +77,6 @@ body {
 .pageWrapper .pageContentContainer .divPage .divLayer {
   width: 100%;
   height: 100%;
-  background: blue;
   position: absolute;
   left: 0;
   right: 0;
