--- a/talkNotes/css/automerge_board.scss
+++ b/talkNotes/css/automerge_board.scss
@@ -34,6 +34,8 @@ body {
       margin : 0 auto;
       display : "grid";
       grid-template-columns: "4fr 3fr";
+      user-select: none;
+
 
       .toolBoxItem {
         display: inline-block;
@@ -59,7 +61,7 @@ body {
           transform-origin: top left;
           transform: scale(1);
           width: 1150px; height: 1678px; margin: 20px auto;
-          background: pink;
+          background: white;
           position: absolute; left: 0; right: 0;
 
           .popUpBox{
@@ -82,7 +84,7 @@ body {
           } // popUpBox
 
           .divLayer {
-            width: 100%; height: 100%; background: blue;
+            width: 100%; height: 100%;
             position: absolute; left: 0; right: 0;
           }
 
